--- a/initial_deploy/tasks/main.yml
+++ b/initial_deploy/tasks/main.yml
@@ -13,11 +13,6 @@
 - name: Install nginx
   apt: name=nginx state=latest
 
-- name: Move files to www/html
-  copy: src={{item}} dest=/var/www/html
-  with_fileglob:
-  - "/vagrant/code/*"
-
 - name: Change nginx config
   copy: src=default dest=/etc/nginx/sites-enabled
   notify: Restart nginx
@@ -37,6 +32,17 @@
 
 - name: Choose php{{php_version}} as default
   shell:  echo "/usr/bin/php{{php_version}}" | update-alternatives --config php
+
+- name: Save php version into variable
+  shell: php -v | awk '{print $1, $2}' | head -n 1
+  register: result
+
+- name: Move files to www/html
+  copy: src=/vagrant/code/display.php dest=/var/www/html
+
+
+- name: Generate index.html
+  template: src=/vagrant/code/index.j2 dest=/var/www/html/index.html
 
 - name: Enable modules
   shell: a2enmod proxy_fcgi setenvif && a2enconf php{{php_version}}-fpm
