--- a/update_php_playbook.yml
+++ b/update_php_playbook.yml
@@ -8,12 +8,10 @@
     php_version: "7.2"
 
   tasks:
-  - name: Php and php-fpm installation
+  - name: Php installation
     apt:
      update_cache: yes
-     pkg:
-     - php{{php_version}}
-     - php{{php_version}}-fpm
+     pkg: name=php{{php_version}}
 
   - name: Choose php{{php_version}} as default
     shell:  echo "/usr/bin/php{{php_version}}" | update-alternatives --config php
@@ -24,9 +22,6 @@
 
   - name: Generate index.html
     template: src=/vagrant/code/index.j2 dest=/var/www/html/index.html
-
-  - name: Enable modules
-    shell: a2enmod proxy_fcgi setenvif && a2enconf php{{php_version}}-fpm
 
   - name: Restart apache
     service: name=apache2.service state=restarted enabled=yes
